Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23478

tst_qdeclarativestates::anchorRewindBug() fails on Mac OS X

    XMLWordPrintable

Details

    • macOS

    Description

      Configuration: OS X Lion 64-bit, release mode.

      The failing test has been QEXPECT_FAIL()'d until this is resolved.

      Attachments

        For Gerrit Dashboard: QTBUG-23478
        # Subject Branch Project Status CR V

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            aakenned Aaron Kennedy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes