Fix tst_qdeclarativestates::anchorsRewindBug failure

maybeUpdate() has an optimization to void locking the Gui thread
on every QQuickItem::update() call, which was faulty. When the
render thread was done rendering the flag should have been reset
which would have meant another locked sync between render and GUI.

Solve it slightly differently by posting an event to ourselves in GUI
and resetting the state once the event is processed. This batches all
update calls made until the GUI thread returns to the event loop, aka
all animation updates, all responds to one touch event, etc.

The isExternalUpdatePending variable, written from maybeUpdate, was
accumulated per canvas, but is used per render thread only, so this
change simplifies the variable to be per render thread only.

Task-number: QTBUG-23478
Change-Id: I067a9918383e3e05e2feebcc6dfa3163b032eb5b
Reviewed-by: Samuel Rødal <samuel.rodal@nokia.com>